crates/aura-macros/tests/boundaries/strong_reference_invalid_domain.stderr
error: strong_reference domain must be one of `channel`, `invitation`, `ceremony`, `home`, or `home_scope`
 --> tests/boundaries/strong_reference_invalid_domain.rs:1:42
  |
1 | #[aura_macros::strong_reference(domain = "contact")]
  |                                          ^^^^^^^^^
