crates/aura-macros/tests/boundaries/strong_reference_invalid_domain.rs
#[aura_macros::strong_reference(domain = "contact")]
struct InvalidDomain;

fn main() {}
